# python_package_template

./: .bandit  .devcontainer.json  .git-blame-ignore-revs  .gitignore  .mypy  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  codecov.yml  requirements-dev.txt  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
docs/: DEVELOPMENT.md
docs/source/: conf.py  index.rst
src/python_package_template/: __init__.py  _version.py
src/python_package_template/scripts/: main.py
src/python_template/: __init__.py  _version.py  example_module.py
src/python_template/scripts/: main.py
tests/: context.py  test_example_module.py
