[metadata]
name = python_package_template
version = 0.0.1
author = Christopher Szczyglowski
author_email = chris.szczyglowski@gmail.com
description = Provides a basic template for Python packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChristopherSzczyglowski/python_package_template/
project_urls =
    Bug Tracker = https://github.com//ChristopherSzczyglowski/python_package_template/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: WSL 2

[entry_points]
console_scripts =
 entry-point = python_package_template.scripts.main:cli

[options]
package_dir = = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/python_package_template/_version.py
versionfile_build = python_package_template/_version.py
tag_prefix =
parentdir_prefix = python_package_template-

[tool:pytest]
testpaths =
    tests
python_functions = should_* test_*
